--- a/css/main.css
+++ b/css/main.css
@@ -13,3 +13,24 @@
     padding: 5px;
     cursor: pointer;
 }
+
+.right {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+}
+
+i {
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+}
+
+.left {
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+}
+
+.content_form{
+
+}
