--- a/css/main.css
+++ b/css/main.css
@@ -128,3 +128,17 @@ button{
 .arrow_button{
     width: 25px;
 }
+.edited-desc{
+    border: none;
+    background-color: #f3f2f2;
+    height: 35px;
+    border-radius: 5px;
+    width: 100%;
+}
+.edited-deadline{
+    border: none;
+    background-color: #f3f2f2;
+    height: 35px;
+    border-radius: 5px;
+    width: 100%;
+}
